--- a/dissertation.bib
+++ b/dissertation.bib
@@ -5236,6 +5236,25 @@ CONCLUSIONS: These findings indicate that the emotional sequelae of puberty exte
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/753Y5H7W/Becht et al. - 2018 - Goal-Directed Correlates and Neurobiological Under.pdf}
 }
 
+@article{kang2016,
+  langid = {english},
+  title = {The {{Role}} of {{Measurement Quality}} on {{Practical Guidelines}} for {{Assessing Measurement}} and {{Structural Invariance}}},
+  volume = {76},
+  issn = {0013-1644},
+  url = {https://doi.org/10.1177/0013164415603764},
+  doi = {10.1177/0013164415603764},
+  abstract = {Although differences in goodness-of-fit indices (ΔGOFs) have been advocated for assessing measurement invariance, studies that advanced recommended differential cutoffs for adjudicating invariance actually utilized a very limited range of values representing the quality of indicator variables (i.e., magnitude of loadings). Because quality of measurement has been found to be relevant in the context of assessing data-model fit in single-group models, this study used simulation and population analysis methods to examine the extent to which quality of measurement affects ΔGOFs for tests of invariance in multiple group models. Results show that ΔMcDonald’s NCI is minimally affected by loading magnitude and sample size when testing invariance in the measurement model, while differences in comparative fit index varies widely when testing both measurement and structural variance as measurement quality changes, making it difficult to pinpoint a common value that suggests reasonable invariance.},
+  number = {4},
+  journaltitle = {Educational and Psychological Measurement},
+  shortjournal = {Educational and Psychological Measurement},
+  urldate = {2018-04-09},
+  date = {2016-08-01},
+  pages = {533-561},
+  keywords = {_diss},
+  author = {Kang, Yoonjeong and McNeish, Daniel M. and Hancock, Gregory R.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/93HJQHFR/Kang et al. - 2016 - The Role of Measurement Quality on Practical Guide.pdf}
+}
+
 @article{borsboom2006,
   langid = {english},
   title = {When {{Does Measurement Invariance Matter}}?},
@@ -6661,6 +6680,125 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   pages = {1646-1655},
   author = {Collins, Anne G. E.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DDNMU9CQ/Collins - 2017 - The Cost of Structure Learning.pdf}
+}
+
+@article{cyders2013,
+  langid = {english},
+  title = {Impulsivity and the {{Sexes}}: {{Measurement}} and {{Structural Invariance}} of the {{UPPS}}-{{P Impulsive Behavior Scale}}},
+  volume = {20},
+  issn = {1073-1911, 1552-3489},
+  url = {http://journals.sagepub.com/doi/10.1177/1073191111428762},
+  doi = {10.1177/1073191111428762},
+  shorttitle = {Impulsivity and the {{Sexes}}},
+  abstract = {Before it is possible to test whether men and women differ in impulsivity, it is necessary to evaluate whether impulsivity measures are invariant across sex. The UPPS-P Impulsive Behavior Scale (negative urgency, lack of premeditation, lack of perseverance, and sensation seeking, with added subscale of positive urgency) is one measure of five dispositions toward rash action that has shown to have robust and clinically useful relationships among risk-taking outcomes. In the current research, the author examined (a) the psychometric measurement invariance of the UPPS-P across sex, (b) the scale’s structural invariance across sex, and (c) whether the five impulsivity traits differentially relate to risk outcomes as a function of sex. In a sample of 1,372 undergraduates, the author found evidence for measurement and invariance across sex: Thus, comparisons of men and women on the UPPS-P can be considered valid. Additionally, although males tend to report higher levels of sensation seeking and positive urgency (and possibly lack of perseverance), the relationships between the UPPS-P traits and risk outcomes were generally invariant across sex. The UPPS-P appears to function comparably across males and females, and mean differences on this scale between the sexes can be thought to reflect trait-level differences.},
+  number = {1},
+  journaltitle = {Assessment},
+  urldate = {2018-07-04},
+  date = {2013-02},
+  pages = {86-97},
+  author = {Cyders, Melissa A.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/PFNU3ZCY/Cyders - 2013 - Impulsivity and the Sexes Measurement and Structu.pdf}
+}
+
+@article{pfeifer2018,
+  langid = {english},
+  title = {The {{Development}} of {{Self}} and {{Identity}} in {{Adolescence}}: {{Neural Evidence}} and {{Implications}} for a {{Value}}-{{Based Choice Perspective}} on {{Motivated Behavior}}},
+  issn = {17508592},
+  url = {http://doi.wiley.com/10.1111/cdep.12279},
+  doi = {10.1111/cdep.12279},
+  shorttitle = {The {{Development}} of {{Self}} and {{Identity}} in {{Adolescence}}},
+  abstract = {Following a key developmental task of childhood—building a foundation of self-knowledge in the form of domain-speciﬁc self-concepts—adolescents begin to explore their emerging identities in ways that foster autonomy and connectedness. Neuroimaging studies of selfrelated processes demonstrate enhanced engagement of the ventromedial prefrontal cortex (PFC) in adolescence, which may facilitate and reﬂect the development of identity by integrating the value of potential actions and choices. Drawing from neuroeconomic and social-cognitive accounts, we propose that motivated behavior during adolescence can be modeled by a general value-based decision-making process centered around value accumulation in the ventromedial PFC. This approach advances models of adolescent neurodevelopment that focus on reward sensitivity and cognitive control by considering more diverse value inputs, including contributions of developing self- and identity-related processes. It also considers adolescent decision making and behavior from adolescents’ point of view rather than adults’ perspectives on what adolescents should value or how they should behave.},
+  journaltitle = {Child Development Perspectives},
+  urldate = {2018-07-05},
+  date = {2018-02-08},
+  author = {Pfeifer, Jennifer H. and Berkman, Elliot T.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TA9SRH4Y/Pfeifer and Berkman - 2018 - The Development of Self and Identity in Adolescenc.pdf}
+}
+
+@article{collins2012,
+  langid = {english},
+  title = {How Much of Reinforcement Learning Is Working Memory, Not Reinforcement Learning? {{A}} Behavioral, Computational, and Neurogenetic Analysis: {{Working}} Memory in Reinforcement Learning},
+  volume = {35},
+  issn = {0953816X},
+  url = {http://doi.wiley.com/10.1111/j.1460-9568.2011.07980.x},
+  doi = {10.1111/j.1460-9568.2011.07980.x},
+  shorttitle = {How Much of Reinforcement Learning Is Working Memory, Not Reinforcement Learning?},
+  abstract = {Instrumental learning involves corticostriatal circuitry and the dopaminergic system. This system is typically modeled in the reinforcement learning (RL) framework by incrementally accumulating reward values of states and actions. However, human learning also implicates prefrontal cortical mechanisms involved in higher level cognitive functions. The interaction of these systems remains poorly understood, and models of human behavior often ignore working memory (WM) and therefore incorrectly assign behavioral variance to the RL system. Here we designed a task that highlights the profound entanglement of these two processes, even in simple learning problems. By systematically varying the size of the learning problem and delay between stimulus repetitions, we separately extracted WM-speciﬁc effects of load and delay on learning. We propose a new computational model that accounts for the dynamic integration of RL and WM processes observed in subjects’ behavior. Incorporating capacitylimited WM into the model allowed us to capture behavioral variance that could not be captured in a pure RL framework even if we (implausibly) allowed separate RL systems for each set size. The WM component also allowed for a more reasonable estimation of a single RL process. Finally, we report effects of two genetic polymorphisms having relative speciﬁcity for prefrontal and basal ganglia functions. Whereas the COMT gene coding for catechol-O-methyl transferase selectively inﬂuenced model estimates of WM capacity, the GPR6 gene coding for G-protein-coupled receptor 6 inﬂuenced the RL learning rate. Thus, this study allowed us to specify distinct inﬂuences of the high-level and low-level cognitive functions on instrumental learning, beyond the possibilities offered by simple RL models.},
+  number = {7},
+  journaltitle = {European Journal of Neuroscience},
+  urldate = {2018-07-05},
+  date = {2012-04},
+  pages = {1024-1035},
+  author = {Collins, Anne G. E. and Frank, Michael J.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LS53SU4J/Collins and Frank - 2012 - How much of reinforcement learning is working memo.pdf}
+}
+
+@article{collins2017b,
+  langid = {english},
+  title = {The Tortoise and the Hare: Interactions between Reinforcement Learning and Working Memory.},
+  url = {http://biorxiv.org/lookup/doi/10.1101/234724},
+  doi = {10.1101/234724},
+  shorttitle = {The Tortoise and the Hare},
+  abstract = {Learning to make rewarding choices in response to stimuli depends on a slow but steady process, reinforcement learning, and a fast and flexible, but capacity limited process, working memory. Using both systems in parallel, with their contributions weighted based on performance, should allow us to leverage the best of each system: rapid early learning, supplemented by long term robust acquisition. However, this assumes that using one process does not interfere with the other. We use computational modeling to investigate the interactions between the two processes in a behavioral experiment, and show that working memory interferes with reinforcement learning. Previous research showed that neural representations of reward prediction errors, a key marker of reinforcement learning, were blunted when working memory was used for learning. We thus predicted that arbitrating in favor of working memory to learn faster in simple problems would weaken the reinforcement learning process. We tested this by measuring performance in a delayed testing phase where the use of working memory was impossible, and thus subject choices depended on reinforcement learning. Counter-intuitively, but confirming our predictions, we observed that associations learned most easily were retained worse than associations learned slower: using working memory to learn quickly came at the cost of long-term retention. Computational modeling confirmed that this could only be accounted for by working memory interference in reinforcement learning computations. These results further our understanding of how multiple systems contribute in parallel to human learning, and may have important applications for education and computational psychiatry.},
+  urldate = {2018-07-05},
+  date = {2017-12-15},
+  author = {Collins, Anne GE},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/ICI7QNKH/Collins - 2017 - The tortoise and the hare interactions between re.pdf}
+}
+
+@article{dowd2016,
+  langid = {english},
+  title = {Probabilistic {{Reinforcement Learning}} in {{Patients With Schizophrenia}}: {{Relationships}} to {{Anhedonia}} and {{Avolition}}},
+  volume = {1},
+  issn = {24519022},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S2451902216300581},
+  doi = {10.1016/j.bpsc.2016.05.005},
+  shorttitle = {Probabilistic {{Reinforcement Learning}} in {{Patients With Schizophrenia}}},
+  abstract = {BACKGROUND: Anhedonia (a reduced experience of pleasure) and avolition (a reduction in goal-directed activity) are common features of patients with schizophrenia that have substantial effects on functional outcome but are poorly understood and treated. We examined whether alterations in reinforcement learning may contribute to these symptoms in patients with schizophrenia by impairing the translation of reward information into goal-directed action.
+METHODS: Thirty-eight stable outpatients with schizophrenia or schizoaffective disorder and 37 healthy control subjects underwent functional magnetic resonance imaging scans during a probabilistic stimulus selection reinforcement learning task with dissociated choice- and feedback-related activation, followed by a behavioral transfer task allowing separate assessment of learning from positive versus negative outcomes. A Q-learning algorithm was used to examine functional activation relating to prediction error at the time of feedback and to expected value at the time of choice.
+RESULTS: Behavioral results suggested a reduction in learning from positive feedback in patients; however, this reduction was unrelated to anhedonia/avolition severity. On analysis of the functional magnetic resonance imaging scans, prediction error–related activation at the time of feedback was highly similar between patients and control subjects. During early learning, patients activated regions in the cognitive control network to a lesser extent than control subjects. Correlation analyses revealed reduced responses to positive feedback in dorsolateral prefrontal cortex and caudate among those patients higher in anhedonia/avolition.
+CONCLUSIONS: These results suggest that anhedonia/avolition are as strongly related to cortical learning or higherlevel processes involved in goal-directed behavior, such as effort computation and planning, as to striatally mediated learning mechanisms.},
+  number = {5},
+  journaltitle = {Biological Psychiatry: Cognitive Neuroscience and Neuroimaging},
+  urldate = {2018-07-05},
+  date = {2016-09},
+  pages = {460-473},
+  author = {Dowd, Erin C. and Frank, Michael J. and Collins, Anne and Gold, James M. and Barch, Deanna M.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/SMTTZ5NQ/Dowd et al. - 2016 - Probabilistic Reinforcement Learning in Patients W.pdf}
+}
+
+@article{collins2017c,
+  langid = {english},
+  title = {Interactions {{Among Working Memory}}, {{Reinforcement Learning}}, and {{Effort}} in {{Value}}-{{Based Choice}}: {{A New Paradigm}} and {{Selective Deficits}} in {{Schizophrenia}}},
+  volume = {82},
+  issn = {00063223},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0006322317316190},
+  doi = {10.1016/j.biopsych.2017.05.017},
+  shorttitle = {Interactions {{Among Working Memory}}, {{Reinforcement Learning}}, and {{Effort}} in {{Value}}-{{Based Choice}}},
+  abstract = {BACKGROUND: When studying learning, researchers directly observe only the participants’ choices, which are often assumed to arise from a unitary learning process. However, a number of separable systems, such as working memory (WM) and reinforcement learning (RL), contribute simultaneously to human learning. Identifying each system’s contributions is essential for mapping the neural substrates contributing in parallel to behavior; computational modeling can help to design tasks that allow such a separable identiﬁcation of processes and infer their contributions in individuals.
+METHODS: We present a new experimental protocol that separately identiﬁes the contributions of RL and WM to learning, is sensitive to parametric variations in both, and allows us to investigate whether the processes interact. In experiments 1 and 2, we tested this protocol with healthy young adults (n = 29 and n = 52, respectively). In experiment 3, we used it to investigate learning deﬁcits in medicated individuals with schizophrenia (n = 49 patients, n = 32 control subjects).
+RESULTS: Experiments 1 and 2 established WM and RL contributions to learning, as evidenced by parametric modulations of choice by load and delay and reward history, respectively. They also showed interactions between WM and RL, where RL was enhanced under high WM load. Moreover, we observed a cost of mental effort when controlling for reinforcement history: participants preferred stimuli they encountered under low WM load. Experiment 3 revealed selective deﬁcits in WM contributions and preserved RL value learning in individuals with schizophrenia compared with control subjects.
+CONCLUSIONS: Computational approaches allow us to disentangle contributions of multiple systems to learning and, consequently, to further our understanding of psychiatric diseases.},
+  number = {6},
+  journaltitle = {Biological Psychiatry},
+  urldate = {2018-07-05},
+  date = {2017-09},
+  pages = {431-439},
+  author = {Collins, Anne G.E. and Albrecht, Matthew A. and Waltz, James A. and Gold, James M. and Frank, Michael J.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/69ZJUV2E/Collins et al. - 2017 - Interactions Among Working Memory, Reinforcement L.pdf}
+}
+
+@software{johnflournoy2018,
+  title = {Jflournoy/Milav v0.1.0-Alpha},
+  url = {https://zenodo.org/record/1294090},
+  abstract = {No description provided.},
+  publisher = {{Zenodo}},
+  urldate = {2018-07-05},
+  date = {2018-06-20},
+  keywords = {_diss},
+  author = {John Flournoy},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/6Z7CKYAR/1294090.html},
+  doi = {10.5281/zenodo.1294090}
 }
 
 
